--- a/.github/workflows/main_flaskapp-wb.yml
+++ b/.github/workflows/main_flaskapp-wb.yml
@@ -1,38 +1,63 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
 name: Deploy Python app to Azure Web App - flaskapp-wb
 
 on:
-  push:
-    branches:
-      - main  # Trigger deployment on push to main
+
+push:
+
+branches:
+
+- main # Trigger deployment on push to main
 
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+build-and-deploy:
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+runs-on: ubuntu-latest
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+steps:
 
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: flaskapp-wb
-          slot-name: production
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
-          package: .
+- name: Checkout code
 
-          
+uses: actions/checkout@v3
+
+- name: Set up Python
+
+uses: actions/setup-python@v4
+
+with:
+
+python-version: '3.10'
+
+- name: Install system dependencies for pyodbc
+
+run: |
+
+sudo apt-get update
+
+sudo apt-get install -y unixodbc-dev gcc g++ python3-dev
+
+- name: Upgrade pip and setuptools
+
+run: |
+
+python -m pip install --upgrade pip setuptools wheel
+
+- name: Install Python dependencies
+
+run: |
+
+pip install -r requirements.txt
+
+- name: Deploy to Azure Web App
+
+uses: azure/webapps-deploy@v2
+
+with:
+
+app-name: flaskapp-wb
+
+slot-name: production
+
+publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
+
+package: .
