--- a/.github/workflows/main_flaskapp-wb.yml
+++ b/.github/workflows/main_flaskapp-wb.yml
@@ -35,3 +35,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: flaskapp-wb
+          slot-name: production
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
+          package: .
