--- a/.github/workflows/main_flaskapp-wb.yml
+++ b/.github/workflows/main_flaskapp-wb.yml
@@ -1,4 +1,4 @@
-name: Deploy Python app to Azure Web App - flaskapp-wb
+name: Build and deploy Python app to Azure Web App
 
 on:
   push:
@@ -10,31 +10,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout GitHub Action
+      uses: actions/checkout@v4  
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+    - name: Set up Python
+      uses: actions/setup-python@v4  
 
-      - name: Install system dependencies for pyodbc
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y unixodbc-dev gcc g++ python3-dev
+      with:
+        python-version: '3.8'
 
-      - name: Upgrade pip and setuptools
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
+    - name: Install system dependencies
+      run: sudo apt-get update && sudo apt-get install -y unixodbc-dev g++
 
-      - name: Install Python dependencies
-        run: |
-          pip install -r requirements.txt
 
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: flaskapp-wb
-          slot-name: production
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
-          package: .
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Upload artifact for deployment job
+      uses: actions/upload-artifact@v4  
+      with:
+        name: python-app
+        path: .
+
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: falaskapp-wb
+        slot-name: production
+        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
+        package: .
