--- a/.github/workflows/main_flaskapp-wb.yml
+++ b/.github/workflows/main_flaskapp-wb.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Python app to Azure Web App
+name: Build and Deploy Python App to Azure Web App
 
 on:
   push:
@@ -10,26 +10,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout GitHub Action
-      uses: actions/checkout@v4  
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v4  
-
+    - name: Setup Python
+      uses: actions/setup-python@v2
       with:
-        python-version: '3.8'
-
-    - name: Install system dependencies
-      run: sudo apt-get update && sudo apt-get install -y unixodbc-dev g++
-
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v4  
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
       with:
         name: python-app
         path: .
@@ -37,7 +32,5 @@ jobs:
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
-        app-name: falaskapp-wb
-        slot-name: production
         publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
         package: .
