--- a/.github/workflows/main_flaskapp-wb.yml
+++ b/.github/workflows/main_flaskapp-wb.yml
@@ -17,6 +17,8 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.10'
+    - name: Install dependencies required by pyodbc
+      run: sudo apt-get update && sudo apt-get install -y unixodbc-dev g++    
 
     - name: Install dependencies
       run: |
